--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="nav-link fw-bold text-light" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fw-bold text-light" href="https://wa.me/919999999999" target="_blank" title="WhatsApp">
+            <a class="nav-link fw-bold text-light" href="https://wa.me/917022076781" target="_blank" title="WhatsApp">
               <i class="fab fa-whatsapp" style="color:#25d366;font-size:1.4em;vertical-align:middle;"></i>
             </a>
           </li>
@@ -326,7 +326,7 @@
             ><i class="fab fa-facebook-f"></i
           ></a>
           <a
-            href="javascript:void(0)"
+            href="https://www.instagram.com/supersprouts_"
             class="instagram me-3"
             onclick="openModal()"
             ><i class="fab fa-instagram"></i
@@ -337,7 +337,7 @@
             onclick="openModal()"
             ><i class="fab fa-youtube"></i
           ></a>
-          <a href="javascript:void(0)" class="whatsapp" onclick="openModal()"
+          <a href="https://wa.me/917022076781" class="whatsapp" onclick="openModal()"
             ><i class="fab fa-whatsapp"></i
           ></a>
         </div>
